<resources>

    <string name="pref_on_off">PREF_ON_OFF</string>
    <string name="pref_all_day">PREF_ALL_DAY</string>
    <string name="pref_hours">PREF_HOURS</string>
    <string name="pref_offset">PREF_OFFSET</string>
    <string name="pref_increment">PREF_INCREMENT</string>
    <string name="pref_volume">PREF_VOLUME</string>
    <string name="pref_source">PREF_SOURCE</string>
    <string name="pref_sound">PREF_SOUND</string>
    <string name="pref_ringtone">PREF_NOTIFICATION</string>
    <string name="alarm_action">com.tonycase.chimealarm.CHIME_ALARM_ACTION</string>

    <string name="app_name">Simple Chime</string>

    <string name="action_settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="sound_settings">Sound Settings</string>

    <string name="content_desc_bell">large image of clock icon</string>

    <string name="limit_to_range">Limit to Range:</string>

    <string name="to">to</string>
    <string name="oh_hundred_pm">:00 PM</string>
    <string name="hour_and_minute_date_format">hh:mm a</string>

    <string name="activation">Activation</string>
    <string name="time_summary_default">Every hour all day</string>
    <string name="offset_summary_default">No offset:  on the hour.</string>
    <string name="offset_summary_before">minutes before the hour.</string>
    <string name="offset_summary_before_singular">1 minute before the hour.</string>
    <string name="offset_summary_after">minutes after the hour.</string>
    <string name="offset_summary_after_singular">1 minute after the hour.</string>
    <string name="increment_summary_default">On the hour</string>
    <string name="times_title">Chime Times</string>
    <string name="volume_summary_default">Volume setting: 8</string>
    <string name="volume">Volume</string>
    <string name="source_summary_app">Using chime sound from app</string>
    <string name="source_summary_phone">Choose phone notification sound</string>
    <string name="app">App</string>
    <string name="phone">Phone</string>
    <string name="source_title">Alternate Sound Source: Phone?</string>
    <string name="sound_dialog_title">Chime Sound</string>
    <string name="increment_dialog_title">Chime Increment</string>
    <string name="sound_summary_default">Selected sound: Clong</string>
    <string name="sound_title">Chime Sound</string>
    <string name="ringtone_title">Notification Sound</string>
    <string name="ringtone_summary_default">Selected sound: default</string>
    <string name="sound_summary_base">"Selected sound:  "</string>
    <string name="chime_is_on">Chime is on</string>
    <string name="chime_is_off">Chime is off</string>
    <string name="chime_always_on">Chime Always On</string>
    <string name="on_off_switch">On/off switch</string>
    <string name="off_capitalized">OFF</string>
    <string name="on_capitalized">ON</string>
    <string name="every_hour_from">"Every hour from "</string>
    <string name="offset_title">Offset</string>
    <string name="other_settings">Other</string>

</resources>
