<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="2dp"
        android:checked="true"
        android:text="@string/chime_always_on"/>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/limit_to_range" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="number" >
        </EditText>

        <TextView
            style="@android:style/Theme.Black"
            android:id="@+id/tpp_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oh_hundred_am_to"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceLarge">
        </EditText>

        <TextView
            android:id="@+id/tpp_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oh_hundred_pm"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>